// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch no label switch is checked 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:rd:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="no-label-switch-is-checked"
  >
    <input
      aria-label="Switch label"
      checked=""
      class="pf-v6-c-switch__input"
      id="no-label-switch-is-checked"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    >
      <div
        class="pf-v6-c-switch__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </div>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch no label switch is not checked 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:rf:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="no-label-switch-is-not-checked"
  >
    <input
      aria-label="Switch label"
      class="pf-v6-c-switch__input"
      id="no-label-switch-is-not-checked"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    >
      <div
        class="pf-v6-c-switch__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </div>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch switch is checked 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:r5:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="switch-is-checked"
  >
    <input
      aria-label="Switch label"
      checked=""
      class="pf-v6-c-switch__input"
      id="switch-is-checked"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-v6-c-switch__label"
    >
      On
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch switch is checked and disabled 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:rh:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="switch-is-checked-and-disabled"
  >
    <input
      aria-label="Switch label"
      checked=""
      class="pf-v6-c-switch__input"
      disabled=""
      id="switch-is-checked-and-disabled"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    >
      <div
        class="pf-v6-c-switch__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </div>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch switch is not checked 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:r7:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="switch-is-not-checked"
  >
    <input
      aria-label="Switch label"
      class="pf-v6-c-switch__input"
      id="switch-is-not-checked"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-v6-c-switch__label"
    >
      On
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch switch is not checked and disabled 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:rj:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="switch-is-not-checked-and-disabled"
  >
    <input
      aria-label="Switch label"
      class="pf-v6-c-switch__input"
      disabled=""
      id="switch-is-not-checked-and-disabled"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    >
      <div
        class="pf-v6-c-switch__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </div>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch switch with only label is checked 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:r9:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="switch-is-checked"
  >
    <input
      aria-labelledby="switch-is-checked-label"
      checked=""
      class="pf-v6-c-switch__input"
      id="switch-is-checked"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-v6-c-switch__label"
      id="switch-is-checked-label"
    >
      On
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch switch with only label is not checked 1`] = `
<DocumentFragment>
  <label
    class="pf-v6-c-switch"
    data-ouia-component-id="OUIA-Generated-Switch-:rb:"
    data-ouia-component-type="PF6/Switch"
    data-ouia-safe="true"
    for="switch-is-not-checked"
  >
    <input
      aria-labelledby="switch-is-not-checked-label"
      class="pf-v6-c-switch__input"
      id="switch-is-not-checked"
      role="switch"
      type="checkbox"
    />
    <span
      class="pf-v6-c-switch__toggle"
    />
    <span
      aria-hidden="true"
      class="pf-v6-c-switch__label"
      id="switch-is-not-checked-label"
    >
      Off
    </span>
  </label>
</DocumentFragment>
`;
